--- a/applescripts/reboot.app/Contents/Info.plist
+++ b/applescripts/reboot.app/Contents/Info.plist
@@ -32,9 +32,9 @@
 	<key>WindowState</key>
 	<dict>
 		<key>bundleDividerCollapsed</key>
-		<true/>
+		<false/>
 		<key>bundlePositionOfDivider</key>
-		<real>0.0</real>
+		<real>673</real>
 		<key>dividerCollapsed</key>
 		<false/>
 		<key>eventLogLevel</key>
@@ -44,7 +44,7 @@
 		<key>positionOfDivider</key>
 		<real>421</real>
 		<key>savedFrame</key>
-		<string>50 36 700 672 0 0 1280 777 </string>
+		<string>50 36 972 672 0 0 1280 777 </string>
 		<key>selectedTab</key>
 		<string>description</string>
 	</dict>
