--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "vim.symlink/bundle/command-t"]
 	path = vim.symlink/bundle/command-t
 	url = https://github.com/wincent/command-t.git
+[submodule "vim.symlink/bundle/vim-gitgutter"]
+	path = vim.symlink/bundle/vim-gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
+[submodule "vim.symlink/bundle/emmet-vim"]
+	path = vim.symlink/bundle/emmet-vim
+	url = https://github.com/mattn/emmet-vim.git
+[submodule "vim.symlink/bundle/vim-surround"]
+	path = vim.symlink/bundle/vim-surround
+	url = git://github.com/tpope/vim-surround.git
