Move to sublime text

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ git/gitconfig.symlink
 
 .DS_Store
 .swp
+
+sublime.symlink/*
+!sublime.symlink/Solarized (dark).sublime-color-scheme
+!sublime.symlink/run_multiple_commands_command.py
+!sublime.symlink/Preferences.sublime-settings
+!sublime.symlink/Ruby on Rails.sublime-settings
+!sublime.symlink/Default (OSX).sublime-keymap
